# tone-tinker

./: .gitignore  README.md  TODOs.txt  demo.py  pyproject.toml
configs/: autoencoder_training_config.yaml  sound_designer_training_config.yaml  vae_training_config.yaml
research/: 20240607_pedalboard_tests.py  20240627_clap_audio_encoder.py  20240627_generate_dataset.py  20240725_explore_clap_embeddings.py  20240802_train_basic_autoencoder.py  20240902_work_with spectrograms.py  20241016_autoencoder_inference.py  20241103_sound_designer_inference.py  20241105_eda.py  massive_params.csv
runs/autoencoder_experiments/2024-07-04_23:33:16/: events.out.tfevents.1734660953.Darios-MacBook-Pro.local.37080.0
runs/autoencoder_experiments/2024-07-04_23:46:09/: events.out.tfevents.1734662769.Darios-MacBook-Pro.local.39201.0
runs/autoencoder_experiments/2024-07-05_00:41:16/: events.out.tfevents.1734666076.Darios-MacBook-Pro.local.43275.0
runs/sound_designer_experiments/2024-07-05_00:59:27/: events.out.tfevents.1734667167.Darios-MacBook-Pro.local.45049.0
runs/sound_designer_experiments/2024-07-05_01:01:54/: events.out.tfevents.1734667314.Darios-MacBook-Pro.local.45210.0
runs/vae_experiments/2025-01-16_11:24:15/: events.out.tfevents.1737037455.192.168.1.4.57004.0
src/: autoencoder_trainer.py  dataset.py  inference.py  preprocess.py  schemas.py  sound_designer_trainer.py  vae_trainer.py
src/ml_models/: __init__.py  autoencoder.py  sound_designer.py  vae.py
src/utils/: __init__.py  checkpoint_manager.py  common.py  logger.py
(+1 files in other folders)
