[tool.poetry]
name = "tone_tinker"
version = "0.1.0"
description = "AI powered sound design engine that generates synth presets from raw audio samples."
authors = ["Dario Wisznewer <dariowisznewer@gmail.com>"]
packages = [
    { include = "src" },
    { include = "research" },
]

[tool.poetry.dependencies]
python = "^3.11.6"
numpy = "^1.23.5"
pedalboard = "^0.9.8"
mido = "^1.3.2"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
laion-clap = "^1.1.4"
librosa = "^0.10.2.post1"
transformers = "4.30.0"  # Downgrade to 4.30.0 to avoid breaking changes. https://github.com/LAION-AI/CLAP/issues/127
tqdm = "^4.66.4"
torchsummary = "^1.5.1"
streamlit = "^1.40.0"
pyyaml = "^6.0.2"
tensorboard = "^2.18.0"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
ipykernel = "^6.29.4"
ipython = "^8.25.0"
ipdb = "^0.13.13"
mypy = "^1.10.1"
python-dotenv = "^1.0.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
